--- a/projects/csv-to-json/index.html
+++ b/projects/csv-to-json/index.html
@@ -13,69 +13,201 @@
   />
   <meta name="author" content="Jovylle B. Bermudez" />
   <style>
-    body {
-      font-family: system-ui, sans-serif;
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
+    :root {
+      font-family: "Space Grotesk", system-ui, sans-serif;
+      background-color: #04070f;
+      color: #e2e8f0;
     }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: #020617;
+    }
+
+    .page {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 48px 24px 72px;
+    }
+
+    .hero {
+      margin-bottom: 32px;
+    }
+
+    .eyebrow {
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      font-size: 0.8rem;
+      color: #94a3b8;
+      margin: 0 0 10px;
+    }
+
+    .hero h1 {
+      margin: 0;
+      font-size: clamp(2.5rem, 4vw, 3.2rem);
+      line-height: 1.1;
+      color: #f8fafc;
+    }
+
+    .lede {
+      margin-top: 12px;
+      color: #cbd5f5;
+      max-width: 720px;
+      line-height: 1.6;
+    }
+
+    .hero-links {
+      margin-top: 22px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+
+    .hero-links a {
+      color: #38bdf8;
+      font-weight: 500;
+      text-decoration: none;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
+    }
+
+    .card {
+      border-radius: 20px;
+      padding: 28px;
+      background: rgba(15, 23, 42, 0.85);
+      border: 1px solid rgba(148, 163, 184, 0.3);
+      box-shadow: 0 20px 40px rgba(2, 6, 23, 0.65);
+    }
+
+    .converter label {
+      font-size: 0.85rem;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: #94a3b8;
+      display: block;
+      margin-bottom: 6px;
+    }
+
     textarea {
       width: 100%;
-      height: 220px;
-      margin: 10px 0;
-      font-family: monospace;
+      min-height: 200px;
+      border-radius: 14px;
+      border: 1px solid rgba(226, 232, 240, 0.25);
+      background: rgba(15, 23, 42, 0.9);
+      color: #e2e8f0;
+      font-family: "Space Grotesk", system-ui, monospace;
+      padding: 14px;
+      resize: vertical;
     }
+
     button {
-      padding: 10px 16px;
-      font-size: 16px;
+      margin: 18px 0;
+      width: 100%;
+      padding: 16px;
+      border-radius: 14px;
+      border: none;
+      font-size: 1rem;
+      font-weight: 600;
+      color: #fff;
+      background: linear-gradient(135deg, #38bdf8, #6366f1);
       cursor: pointer;
     }
-    section {
-      margin-top: 32px;
-      padding: 18px;
-      border: 1px solid #e8e8e8;
-      border-radius: 12px;
-      background: #f9f9fb;
-    }
-    section h3 {
+
+    .notes h2 {
       margin-top: 0;
+      font-size: 1.5rem;
+      color: #f8fafc;
     }
-    a {
-      color: royalblue;
+
+    .notes p {
+      color: #cbd5f5;
+      line-height: 1.6;
+    }
+
+    .notes ul {
+      padding-left: 20px;
+      color: #94a3b8;
+      line-height: 1.6;
+    }
+
+    .notes footer {
+      margin-top: 18px;
+      color: #94a3b8;
+      font-size: 0.9rem;
+    }
+
+    .notes a {
+      color: #38bdf8;
+    }
+
+    code {
+      background: rgba(59, 130, 246, 0.15);
+      padding: 2px 6px;
+      border-radius: 6px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+  <main class="page">
+    <header class="hero">
+      <p class="eyebrow">Dynamo Attribute CSV Normalizer</p>
+      <h1>Clean JSON from Dynamo-style exports</h1>
+      <p class="lede">
+        Drop CSV files that still wrap values in Dynamo attribute maps (S, N, BOOL,
+        M, L, etc.) and get a ready-to-use JSON payload. The page unwraps the
+        metadata so downstream scripts, dashboards, or automations can consume
+        what you just uploaded.
+      </p>
+      <div class="hero-links">
+        <a href="https://github.com/jovylle/mini-projects/tree/master/projects/csv-to-json" target="_blank" rel="noreferrer">View source</a>
+        <a href="https://jovylle.com" target="_blank" rel="noreferrer">Visit jovylle.com</a>
+      </div>
+    </header>
 
-<h2>CSV → JSON Converter</h2>
+    <section class="grid">
+      <div class="card converter">
+        <div class="field">
+          <label for="csv">Paste Dynamo-exported CSV</label>
+          <textarea id="csv" placeholder="clientId,clientName,..."></textarea>
+        </div>
 
-<p>Paste CSV:</p>
-<textarea id="csv"></textarea>
+        <button onclick="convert()">Normalize to JSON</button>
 
-<button onclick="convert()">Convert</button>
+        <div class="field">
+          <label for="json">Plain JSON output</label>
+          <textarea id="json" readonly></textarea>
+        </div>
+      </div>
 
-<p>JSON output:</p>
-<textarea id="json" readonly></textarea>
+      <aside class="card notes">
+        <h2>Why this works</h2>
+        <p>
+          DynamoDB csv exports wrap every field with metadata like
+          `{"S":"value"}` or `{"M":{...}}`. This parser strips those wrappers,
+          keeps booleans and numbers typed, and leaves other strings untouched.
+        </p>
+        <ul>
+          <li>Handles maps (`M`), lists (`L`), and nested attribute sets.</li>
+          <li>Parses numeric strings into numbers; empty cells become `null`.</li>
+          <li>Gracefully parses embedded JSON inside cells before normalizing.</li>
+        </ul>
+        <p>
+          Deployed via Netlify—pushes to <code>master</code> rebuild automatically.
+        </p>
+        <footer>
+          Built by <a href="https://jovylle.com" target="_blank" rel="noreferrer">Jovylle Bermudez</a>
+        </footer>
+      </aside>
+    </section>
+  </main>
 
-<section aria-label="about this tool">
-  <h3>Why this converter?</h3>
-  <p>
-    This project lives on
-    <a href="https://github.com/jovylle/mini-projects" target="_blank"
-      >GitHub</a
-    >
-    and is automatically deployed through Netlify. Drop in CSV exports that
-    still contain Dynamo-style type wrappers and the parser unwraps each value
-    into plain JSON primitives so downstream tooling—dashboards, databases, or
-    dashboards—can consume it immediately.
-  </p>
-  <p>
-    Learn more about my work and reach out at
-    <a href="https://jovylle.com" target="_blank">jovylle.com</a>.
-  </p>
-</section>
-
-<script defer src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
 function convert() {
   const input = document.getElementById("csv").value.trim();
