remove demo label

--- a/projects/index.html
+++ b/projects/index.html
@@ -181,7 +181,7 @@
             <li>Deploys via Netlify every time the repo receives a push.</li>
           </ul>
           <div>
-            <a href="./csv-to-json/" target="_blank" rel="noreferrer">Open demo</a>
+            <a href="./csv-to-json/" target="_blank" rel="noreferrer">Open converter</a>
             <a
               href="https://github.com/jovylle/mini-projects/tree/master/projects/csv-to-json"
               target="_blank"
